--- a/client/package.json
+++ b/client/package.json
@@ -20,11 +20,13 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.2",
+    "react-slick": "^0.29.0",
     "react-toastify": "^9.1.1",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.6",
     "uuid": "^9.0.0",
     "yup": "^0.32.11"
